--- a/package.json
+++ b/package.json
@@ -91,7 +91,6 @@
     "dlv": "^1.1.3",
     "doctrine": "^3.0.0",
     "dom7": "^4.0.6",
-    "dotenv": "^16.6.1",
     "easy-extender": "^2.3.4",
     "eazy-logger": "^4.1.0",
     "ee-first": "^1.1.1",
@@ -148,17 +147,21 @@
     "autoprefixer": "^10.4.23",
     "concurrently": "^9.2.1",
     "css-loader": "^7.1.3",
+    "dotenv": "^17.2.3",
     "mini-css-extract-plugin": "^2.10.0",
     "postcss": "^8.5.6",
     "postcss-loader": "^8.2.0",
     "tailwindcss": "^3.4.0",
     "webpack": "^5.104.1",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-shell-plugin-next": "^2.3.3"
   },
   "scripts": {
     "build": "webpack",
     "watch": "webpack --watch",
-    "dev": "concurrently \"npm run watch\" \"shopify theme dev\""
+    "dev": "concurrently \"npm run watch\" \"shopify theme dev\"",
+    "start": "webpack --mode development --watch",
+    "prod-development": "concurrently \"npm run watch\" \"shopify theme dev --environment production\""
   },
   "repository": {
     "type": "git",
